# learnopengl

./: .gitignore  CMakeLists.txt  copyResource.cmd  copyShaderSource.cmd  learnopengl.sln  main.cpp  playground.cpp  test.cpp
1-GettingStarted/: 1-GettingStarted.vcxproj  1-GettingStarted.vcxproj.filters  helloTriangle-exercise.cpp  helloTriangle-exercise.h  helloTriangle.cpp  helloTriangle.h  main.cpp
AxisHelper/: AxisHelper.h
Camera/: camera.h
ContextProvider/: CMakeLists.txt  ContextProvider.cpp  ContextProvider.h
Plane/: Plane.h
Shader/: shader.h
common/: common.vcxproj  common.vcxproj.filters  openglDraw.cpp  openglDraw.h  shader_s.h
common/glad/: glad.c
include/glad/: glad.h
lib/: glfw3.lib
resource/: fragment.frag  fragment.fs  myCube.frag  myCube.vert  myLamp.frag  myLamp.vert  vertex.vert  vertex.vs
shaderSource/: fragment.fs  vertex.vs
